--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -12,7 +12,7 @@
 
 // Backgrounds
 .bg-black {
-  background: #4a4a4a;
+  background: #040F0F; // this is our Hype black colour
 }
 .bg-grey {
   background: #aeaeae;
@@ -21,5 +21,10 @@
   background: #00a3e1;
 }
 .bg-dark-blue {
-  background: #3b5998;
+  background: #333745; // this is our Hype dark blue colour
+}
+
+// Fonts & colours
+.body-font {
+  color: #EEEEEE;
 }
