--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,5 +1,5 @@
 /* Main class */
-.navbar-wagon {
+.navbar-hype {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
@@ -11,7 +11,7 @@
 }
 
 /* Optional class to fix the navbar on top */
-.navbar-wagon-fixed {
+.navbar-hype-fixed {
   position: fixed;
   left: 0px;
   top: 0px;
@@ -20,60 +20,61 @@
 }
 
 /* Navbar logo */
-.navbar-wagon-brand img {
+.navbar-hype-brand img {
   width: 50px;
 }
 
 /* Navbar right section (with form, links, button) */
-.navbar-wagon-right {
+.navbar-hype-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 /* Navbar item */
-.navbar-wagon-item {
+.navbar-hype-item {
   flex: 0 1 auto;
   cursor: pointer;
   padding: 0 20px;
 }
 
 /* Navbar standard link */
-.navbar-wagon-link {
+.navbar-hype-link {
   color: #616668;
   font-size: 14px;
 }
-.navbar-wagon-link:hover {
-  color: #da552f;
+.navbar-hype-link:hover {
+  color: #333745;
   text-decoration: none;
 }
 
 /* Navbar right button */
-.navbar-wagon-button {
+.navbar-hype-button {
   margin-left: 10px;
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: #333745;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  letter-spacing: 3px;
+  border: 2px solid #333745;
 }
-.navbar-wagon-button:hover {
-  color: white;
-  background: #D23333;
-  border-color: #ac2626;
+.navbar-hype-button:hover {
+  color: #333745;
+  background: white;
+  border-color: #333745;
 }
 
 /* Navbar search form */
-.navbar-wagon-search {
+.navbar-hype-search {
   flex: 0 1 300px;
   display: flex;
   justify-content: flex-end;
   padding: 0 10px;
   position: relative;
 }
-.navbar-wagon-search-btn {
+.navbar-hype-search-btn {
   line-height: 40px;
   color: #E6E6E6;
   border: none;
@@ -83,7 +84,7 @@
   top: -2px;
   z-index: 1;
 }
-.navbar-wagon-search-input {
+.navbar-hype-search-input {
   flex: 0 1 300px;
   transition: all 0.15s ease;
   line-height: 40px;
@@ -95,17 +96,17 @@
   font-size: 14px;
   outline: none;
 }
-.navbar-wagon-search-input:focus  {
+.navbar-hype-search-input:focus  {
   border: 1px solid #CCCCCC;
 }
 
 /* Navbar dropdown menu */
-.navbar-wagon-dropdown-menu {
+.navbar-hype-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
 }
-.navbar-wagon-dropdown-menu li > a {
+.navbar-hype-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
@@ -113,11 +114,11 @@
   line-height: 22px !important;
   padding: 10px 20px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
+.navbar-hype-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
 }
-.navbar-wagon-dropdown-menu:before {
+.navbar-hype-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
