--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class= "intro-copy">Welcome to Hype Me</h1>
+      <p>Discover cool events local to you</p>
+      <div class="body-copy">
+
+      </div>
+    </div>
+  </div>
+</div>
+
