--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -5,9 +5,10 @@
   font-weight: lighter;
   position: absolute;
   bottom: 0;
-  margin: 0 auto;
+  left: 0;
   width: 100%;
   height: 150px;
+  overflow:hidden;
 }
 .footer-left {
   padding: 27px 0 0 0px;
