landing page stuff

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class= "intro-copy">Welcome to Hype Me</h1>
-      <p>Discover cool events local to you</p>
-      <div class="body-copy">
-
-      </div>
+      <h1 class= "intro-copy">Discover club events local to you</h1>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+      <a href="#" class="hype-btn">HYPE ME!</a>
     </div>
   </div>
 </div>
