--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -58,7 +58,7 @@
     <% end %>
 
     <!-- Button (call-to-action) -->
-    <%= link_to t(".top_call_to_action", default: "HYPE ME"), "#", class: "navbar-hype-item navbar-hype-button btn" %>
+    <%= link_to t(".top_call_to_action", default: "SIGN UP"), "#", class: "navbar-hype-item navbar-hype-button btn" %>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
