--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,15 +3,15 @@
   color: #C6C5B9;
   font-size: 12px;
   font-weight: lighter;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
-  height: 150px;
-  overflow:hidden;
+  margin-top: 100px;
+  // height: 150px;
+}
+.footer-wrapper {
+  background: #040F0F;
 }
 .footer-left {
-  padding: 27px 0 0 0px;
+  padding: 27px 0 27px 0px;
 }
 .footer-logo img {
   width: 30px;
@@ -28,15 +28,40 @@
   }
 }
 .footer-icons {
-  padding: 68px 140px 0 130px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-
+  justify-content: center;
   li {
     list-style-type: none;
+    padding: 68px 10px;
   }
   li:hover {
     color: #61D095;
   }
 }
+.display-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+// mobile only
+@media (max-width: 480px) {
+  .footer-icons li {
+    padding: 10px 10px 0 10px;
+  }
+  .display-footer {
+    flex-direction: column-reverse;
+  }
+  .display-footer-child {
+    padding: 30px 0;
+  }
+}
+// tablet/desktop only
+@media (min-width: 481px) {
+  .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
+
