--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -21,7 +21,7 @@
   background: #00a3e1;
 }
 .bg-dark-blue {
-  background: #333745; // this is our Hype dark blue colour
+  background: #333745; // this is our Hype dark blue main background colour
 }
 
 // Fonts & colours
