--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,5 +3,5 @@
  * (margin/padding adjustments)
  * ------------------------------------- */
 .intro-copy {
-  padding-top: 50px;
+  padding: 60px 0 90px 0;
 }
