--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,27 +1,25 @@
-<div class="container footer bg-black text-center">
-  <div class="div-row">
-
-    <div class="col-xs-12 col-md-4 footer-left">
-      <div class="footer-logo">
-        <%= link_to root_path, class: "footer-hype-brand" do %>
-          <%= image_tag "hm_logo_bl.png" %>
-        <% end %>
-      </div>
-      <div class="footer-copyright">
-        <p>Copyright © 2016 Hype Me.</p>
-      </div>
+  <div class="footer bg-black text-center display-footer">
+  <div class="display-footer-child">
+    <div class="footer-logo">
+      <%= link_to root_path, class: "footer-hype-brand" do %>
+        <%= image_tag "hm_logo_bl.png" %>
+      <% end %>
     </div>
-    <div class="col-xs-12 col-md-4 footer-links">
-      <p>About</p>
-      <p>Terms & Conditions</p>
-      <p>Contact</p>
+    <div class="footer-copyright">
+      <p>Copyright © 2016 Hype Me.</p>
     </div>
-    <div class="col-xs -12 col-md-4 footer-icons">
-      <li><i class="fa fa-facebook"></i></li>
-      <li><i class="fa fa-instagram"></i></li>
-      <li><i class="fa fa-phone"></i></li>
-    </div>
-
+  </div>
+  <div class="display-footer-child footer-links">
+    <p>About</p>
+    <p>Terms & Conditions</p>
+    <p>Contact</p>
+  </div>
+  <div class="display-footer-child footer-icons">
+    <li><i class="fa fa-facebook"></i></li>
+    <li><i class="fa fa-instagram"></i></li>
+    <li><i class="fa fa-phone"></i></li>
   </div>
 </div>
+</div>
+
 
