--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-  <div class="footer bg-black text-center display-footer">
-  <div class="display-footer-child">
+<div class="footer bg-black text-center">
+  <div class="footer-child">
     <div class="footer-logo">
       <%= link_to root_path, class: "footer-hype-brand" do %>
         <%= image_tag "hm_logo_bl.png" %>
@@ -9,17 +9,17 @@
       <p>Copyright © 2016 Hype Me.</p>
     </div>
   </div>
-  <div class="display-footer-child footer-links">
+  <div class="footer-child footer-links">
     <p>About</p>
     <p>Terms & Conditions</p>
     <p>Contact</p>
   </div>
-  <div class="display-footer-child footer-icons">
+  <div class="footer-child footer-icons">
     <li><i class="fa fa-facebook"></i></li>
     <li><i class="fa fa-instagram"></i></li>
     <li><i class="fa fa-phone"></i></li>
   </div>
 </div>
-</div>
+
 
 
