--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -4,6 +4,10 @@
   font-size: 12px;
   font-weight: lighter;
   width: 100%;
+  padding: 30px 0 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin-top: 100px;
   // height: 150px;
 }
@@ -15,14 +19,13 @@
 }
 .footer-logo img {
   width: 30px;
-  margin-top: 20px;
   padding-bottom: 10px;
 }
 .footer-copyright {
   font-size: 10px;
 }
 .footer-links {
-  padding: 40px 0 0 0;
+  justify-content: space-between;
   p:hover{
     color: #61D095;
   }
@@ -39,20 +42,18 @@
     color: #61D095;
   }
 }
-.display-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
+
+
 // mobile only
 @media (max-width: 480px) {
+  .footer {
+    flex-direction: column-reverse;
+    justify-content: space-between;
+  }
   .footer-icons li {
     padding: 10px 10px 0 10px;
   }
-  .display-footer {
-    flex-direction: column-reverse;
-  }
-  .display-footer-child {
+  .footer-child {
     padding: 30px 0;
   }
 }
