--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -35,7 +35,7 @@
     list-style-type: none;
     padding: 68px 10px;
   }
-  li:hover {
+  i:hover {
     color: #61D095;
   }
 }
@@ -62,6 +62,9 @@
     position: absolute;
     bottom: 0;
     left: 0;
+  }
+  .footer-icons {
+    padding-top: 30px;
   }
 }
 
