--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,13 @@
-<div class="container text-center">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1 class= "intro-copy">Discover club events local to you</h1>
-    </div>
+<div class="wrapper">
+  <div class="container text-center">
     <div class="row">
       <div class="col-xs-12">
-      <a href="#" class="hype-btn">HYPE ME!</a>
+        <h1 class= "intro-copy">Discover club events local to you</h1>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+        <a href="#" class="hype-btn">HYPE ME!</a>
+      </div>
     </div>
   </div>
 </div>
-
