--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,9 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-        <a href="#" class="hype-btn">HYPE ME!</a>
+          <%= link_to t("HYPE ME!"), "#", class: "hype-btn" %>
       </div>
     </div>
   </div>
 </div>
+
