--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-        <a href="#" class="hype-btn">HYPE ME!</a>
+        <a href="#" id="hype-btn">HYPE ME!</a>
       </div>
     </div>
   </div>
