--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -1,4 +1,4 @@
-.hype-btn {
+#hype-btn {
   color: white;
   background: #F89D33;
   border-radius: 50px;
@@ -11,7 +11,7 @@
   font-size: 18px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
-.hype-btn:hover {
+#hype-btn:hover {
   text-decoration: none;
   color: white;
   box-shadow: inset 0 0 10px #000000;
