--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,6 @@
-<div id="map" style="width: 100%; height: 600px;"></div>
+<div id="map" style="width: 1000%; height: 400px;"></div>
 
+<script>
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
     $(document).ready(function() {
@@ -17,3 +18,4 @@
     });
   <% end %>
 <% end %>
+</script>
