--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,12 +8,12 @@
   <div class="navbar-hype-right hidden-xs hidden-sm">
 
     <!-- Search form -->
-    <form action="" class="navbar-hype-search">
-      <input type="text" class="navbar-hype-search-input" placeholder="Clubs near you">
-      <button type="submit" class="navbar-hype-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
+    <!-- <form action="" class="navbar-hype-search"> -->
+      <!-- <input type="text" class="navbar-hype-search-input" placeholder="Clubs near you"> -->
+      <!-- <button type="submit" class="navbar-hype-search-btn"> -->
+        <!-- <i class="fa fa-search"></i> -->
+      <!-- </button> -->
+    <!-- </form> -->
 
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
