show template & comments & fixed footer

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -58,11 +58,11 @@
   }
 }
 // tablet/desktop only
-@media (min-width: 481px) {
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-}
+// @media (min-width: 481px) {
+//   .footer {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//   }
+// }
 
