--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -12,7 +12,7 @@
 
 // Backgrounds
 .bg-black {
-  background: #040F0F; // this is our Hype black colour
+  background: #040F0F; // this is our Hype black colour (as in footer)
 }
 .bg-grey {
   background: #aeaeae;
