--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -20,3 +20,20 @@
 }
 // border-radius: 20em;
 // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+.show-cta-btn {
+  margin-left: 10px;
+  padding: 10px 20px;
+  border-radius: 20em;
+  line-height: 40px;
+  background-color: #61D095;
+  color: white;
+  font-size: 12px;
+  letter-spacing: 3px;
+  border: 2px solid #61D095;
+}
+.show-cta-btn:hover {
+  color: #61D095;
+  background: #333745;
+  border-color: #61D095;
+  text-decoration: none;
+}
