--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="se-pre-con hidden"></div>
 <div class="wrapper">
   <div class="container text-center">
     <div class="row">
@@ -7,7 +8,7 @@
       <div class="row">
         <div class="col-xs-12">
         <a href="#" class="hype-btn">HYPE ME!</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
