--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,5 +16,14 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(Preloader_10.gif) center no-repeat #fff;
+  background: url(ripple.gif) center no-repeat #fff;
+  background-color: #333745;
 }
+
+
+
+
+
+
+
+
