--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,4 +1,4 @@
-<div class="container padded">
+<div class="container map-container">
   <div id="map" style="width: 100%; height: 400px;"></div>
   <script>
   <% content_for(:after_js) do %>
