--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,14 +32,29 @@
     <div class="row">
       <div class="col-xs-6">
         <ul class="infos line-up-list">
-          <h4>Line up:</h4>
-          <li>- Lorem ipsum <i class="fa fa-headphones soundcloud-link"></i></li>
-          <li>- Lorem ipsum <i class="fa fa-headphones soundcloud-link"></i></li>
-          <li>- Lorem ipsum <i class="fa fa-headphones soundcloud-link"></i></li>
-          <li>- Lorem ipsum <i class="fa fa-headphones soundcloud-link"></i></li>
-          <li>- Lorem ipsum <i class="fa fa-headphones soundcloud-link"></i></li>
-        </ul>
-        <%= link_to t("See full line up list"), "#", class: "lineup-link" %> <!-- Expand to see full line up / or a pop up page?: -->
+          <h4>Line up:</h4><br>
+          <li>- DJ Fresh <br>
+            <em class= "soundcloud-link">
+            <i class="fa fa-headphones"></i>  Listen </em>
+          </li>
+          <li>- DJ Cool <br>
+            <em class= "soundcloud-link">
+            <i class="fa fa-headphones"></i>  Listen </em>
+          </li>
+          <li>- DJ Gigi <br>
+            <em class= "soundcloud-link">
+            <i class="fa fa-headphones"></i>  Listen </em>
+          </li>
+          <li>- DJ Jor <br>
+            <em class= "soundcloud-link">
+            <i class="fa fa-headphones"></i>  Listen </em>
+          </li>
+          <li>- DJ Knox <br>
+            <em class= "soundcloud-link">
+            <i class="fa fa-headphones"></i>  Listen </em>
+          </li>
+        </ul><br>
+        <%= link_to t("Show full line up"), "#", class: "full-lineup-link" %> <!-- Expand to see full line up / or a pop up page?: -->
       </div>
   <!-- Event opening hours -->
       <div class="col-xs-6">
