--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -2,6 +2,10 @@
   color: #F89D33;
   padding-top: 30px;
 }
+.event-photo {
+  width: 100%;
+  padding-bottom: 40px;
+}
 .infos p {
   margin-bottom: 50px;
 }
@@ -9,28 +13,29 @@
   list-style-type: none;
   padding-left: 0;
 }
-.lineup-link {
-  color: #F89D33;
-  text-decoration: none;
-  font-size: 16px;
-}
-.lineup-link:hover {
-  color: #61D095;
-  text-decoration: none;
-}
-.event-photo {
-  width: 100%;
-  padding-bottom: 40px;
-}
-.map-container {
-  padding-bottom: 40px;
-}
-.event-description {
-  padding-bottom: 40px;
-}
 .soundcloud-link {
   color: #F89D33;
 }
 .soundcloud-link:hover {
   color: #61D095;
+}
+em {
+  color: #F89D33;
+  font-style: normal;
+  font-size: 14px;
+}
+.full-lineup-link {
+  color: #F89D33;
+  text-decoration: none;
+  font-size: 16px;
+}
+.full-lineup-link:hover {
+  color: #61D095;
+  text-decoration: none;
+}
+.event-description {
+  padding-bottom: 40px;
+}
+.map-container {
+  padding-bottom: 40px;
 }
