--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -22,16 +22,19 @@
 em {
   color: #F89D33;
   font-style: normal;
-  font-size: 14px;
+  font-size: 12px;
 }
 .full-lineup-link {
   color: #F89D33;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
+  border: 1px solid #F89D33;
+  padding: 5px;
 }
 .full-lineup-link:hover {
   color: #61D095;
   text-decoration: none;
+  border: 1px solid #61D095;
 }
 .event-description {
   padding-bottom: 40px;
