--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
+<%= render 'shared/navbar' %>
 <div class="se-pre-con hidden"></div>
 <div class="wrapper">
-  <div class="container text-center">
+  <div class="container text-center home-container">
     <div class="row">
       <div class="col-xs-12">
         <h1 class= "intro-copy">Discover club events local to you</h1>
