--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,36 +1,51 @@
 <!-- Event title -->
 <div class="container">
-  <div class="container">
-    <div class="event-title">
-      <h1><%= @event.title %></h1>
+  <div class="row">
+    <div class="col-xs-4">
+    </div>
+    <div class="col-xs-8">
+      <div class="event-title">
+        <h2><%= @event.title %></h2>
+      </div>
     </div>
   </div>
+  <hr class= "orange-line-top" width="100%">
 
   <!-- Event photo -->
-  <div class="container">
-    <h1><%= cl_image_tag(@event.photo, crop: :fill, class: "event-photo") %></h1>
+  <div class=" event-photo">
+    <%= cl_image_tag(@event.photo, crop: :fill, class: "event-photo") %>
   </div>
+  <hr class= "orange-line-two" width="100%">
 
   <!-- Event address -->
   <div class="container text-center">
     <div class="row infos">
-      <div class="col-xs-6">
+      <div class="col-xs-6 address-padding">
         <p><%= @event.address %></p>
-        <%= link_to t("View map"), "#", class: "show-cta-btn padded" %> <!-- hot link to map -->
       </div>
-  <!-- Event price -->
       <div class="col-xs-6">
+        <!-- Event price -->
+        <p><%= @event.opening_hours %></p>
+        <!-- Event opening hours -->
         <p><%= @event.price %></p>
-  <!-- Link buy tickets: -->
-        <%= link_to t("Buy tickets"), "#", class: "show-cta-btn" %>
+      </div>
+    </div>
+    <!-- Buttons -->
+    <div class="row">
+      <div class="col-xs-6">
+        <%= link_to t("View map"), "#", class: "show-cta-btn padded" %> <!-- Hot link to map -->
+      </div>
+      <div class="col-xs-6">
+        <%= link_to t("Buy tickets"), "#", class: "show-cta-btn" %><!-- Link buy tickets: -->
       </div>
     </div>
   </div>
+  <hr class= "green-line" width="100%">
 
   <!-- Event line-up -->
-  <div class="container text-center padded">
-    <div class="row">
-      <div class="col-xs-6">
+  <div class="container text-center">
+    <div class="row line-up-container">
+      <div class="col-xs-12">
         <ul class="infos line-up-list">
           <h4>Line up:</h4><br>
           <li>- DJ Fresh <br>
@@ -56,13 +71,9 @@
         </ul><br>
         <%= link_to t("Show full line up"), "#", class: "full-lineup-link" %> <!-- Expand to see full line up / or a pop up page?: -->
       </div>
-  <!-- Event opening hours -->
-      <div class="col-xs-6">
-        <h4>Opening hours:</h4>
-        <p><%= @event.opening_hours %></p>
-      </div>
     </div>
   </div>
+  <hr class= "green-line" width="100%">
 
   <!-- Event description -->
   <div class="container text-center">
@@ -73,7 +84,7 @@
       </div>
     </div>
   </div>
-
+  <hr class= "orange-line-bottom" width="100%">
   <!-- Map partial -->
   <%= render 'map' %>
 
@@ -81,4 +92,5 @@
   <div class="container text-center">
     <%= link_to t("Get directions"), "#", class: "show-cta-btn" %>
   </div>
+  <hr class= "orange-line-bottom" width="100%">
 </div>
