--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -9,7 +9,9 @@
   align-items: center;
   justify-content: space-between;
 }
-
+.navbar-hype-black {
+  background: #040F0F;
+}
 /* Optional class to fix the navbar on top */
 .navbar-hype-fixed {
   position: fixed;
