--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/navbar' %>
+<%= render 'shared/navbar_white' %>
 <div class="se-pre-con hidden"></div>
 <div class="wrapper">
   <div class="container text-center home-container">
