--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,5 +1,5 @@
 <div class="map-container">
-  <div id="map" style="width: 100%; height: 400px;"></div>
+  <div id="map<%=index%>" style="width: 100%; height: 400px;"></div>
   <script>
   <% content_for(:after_js) do %>
     <%= javascript_tag do %>
@@ -11,9 +11,9 @@
           provider: {
             styles: styles
           },
-          internal: { id: 'map' }
+          internal: { id: 'map<%=index%>' }
         }, function() {
-          markers = handler.addMarkers(<%= raw @hash.to_json %>);
+          markers = handler.addMarkers(<%= raw [{:lat=>event.latitude, :lng=>event.longitude}].to_json %>);
           handler.bounds.extendWith(markers);
           handler.fitMapToBounds();
           handler.getMap().setZoom(14);
