ready for heroku

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -85,7 +85,7 @@
       </div>
     </div>
   </div>
-  <hr class= "orange-line-bottom" width="100%">
+  <hr class= "orange-line-three" width="100%">
   <!-- Map partial -->
   <%= render 'map' %>
 
