--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar_black' %>
 <% @events.each_with_index do |event, index| %>
   <!-- Event title -->
   <div class="container">
@@ -22,6 +23,7 @@
     <div class="container text-center">
       <div class="row infos">
         <div class="col-xs-6 address-padding">
+          <p><%= event.club.name %></p>
           <p><%= event.address %></p>
         </div>
         <div class="col-xs-6">
