pushing to heroku

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -60,11 +60,9 @@
 }
 }
 // tablet/desktop only
-// @media (min-width: 481px) {
-//   .footer {
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//   }
-// }
+@media (min-width: 481px) {
+  .footer {
+    padding: 20px 0 10px 0;
+  }
+}
 
