--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -64,6 +64,7 @@ em {
 .event-description p {
   margin-bottom: 0;
   font-weight: lighter;
+  font-size: 15px;
 }
 .map-container {
   padding-bottom: 40px;
