--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,27 +19,35 @@
     </div>
     <hr class= "orange-line-two" width="100%">
 
-    <!-- Event address -->
+    <!-- Club name -->
     <div class="container text-center">
       <div class="row infos">
         <div class="col-xs-6 address-padding">
           <p><%= event.club.name %></p>
+        </div>
+        <div class="col-xs-6">
+          <!-- Event opening hours -->
+          <p><%= event.opening_hours %></p>
+        </div>
+      </div>
+       <div class="row infos">
+        <div class="col-xs-6 address-padding">
+          <!-- Event address -->
           <p><%= event.address %></p>
         </div>
         <div class="col-xs-6">
           <!-- Event price -->
-          <p><%= event.opening_hours %></p>
-          <!-- Event opening hours -->
           <p><%= event.price %></p>
         </div>
       </div>
+
       <!-- Buttons -->
       <div class="row">
         <div class="col-xs-6">
           <%= link_to t("View map"), "#", class: "show-cta-btn padded" %> <!-- Hot link to map -->
         </div>
         <div class="col-xs-6">
-          <%= link_to t("Buy tickets"), "#", class: "show-cta-btn" %><!-- Link buy tickets: -->
+          <%= link_to t("Buy now"), "#", class: "show-cta-btn" %><!-- Link buy tickets: -->
         </div>
       </div>
     </div>
@@ -87,7 +95,7 @@
         </div>
       </div>
     </div>
-    <hr class= "orange-line-bottom" width="100%">
+    <hr class= "orange-line-three" width="100%">
     <!-- Map partial -->
     <%= render 'map', event: event, index: index %>
 
