--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -51,6 +51,7 @@
           <li>- DJ Fresh <br>
             <em class= "soundcloud-link">
             <i class="fa fa-headphones"></i>  Listen </em>
+            <%=  @url_embed.html_safe %>
           </li>
           <li>- DJ Cool <br>
             <em class= "soundcloud-link">
