get directions button done

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -220,7 +220,7 @@
 
           <!-- link to google maps api?? -->
           <div class="container text-center">
-            <%= link_to t("Get directions"), "#", class: "show-cta-btn" %>
+            <%= link_to t("Get directions"), "https://www.google.com/maps/dir/#{@user_lat},#{@user_lng}/#{event.latitude},#{event.longitude}", target:"_blank", class: "show-cta-btn" %>
           </div>
           <hr class= "orange-line-bottom" width="100%">
           <div class="container text-center">
