--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -46,7 +46,7 @@
             <!-- Buttons -->
             <div class="row">
               <div class="col-xs-6">
-                <%= link_to t("View map"), "#", class: "show-cta-btn padded" %> <!-- Hot link to map -->
+                <%= link_to t("View map"), "#map-section", class: "show-cta-btn padded" %> <!-- Hot link to map -->
               </div>
               <div class="col-xs-6">
                 <%= link_to t("Buy now"), "#", class: "show-cta-btn" %><!-- Link buy tickets: -->
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-          <hr class= "orange-line-bottom" width="100%">
+          <hr class= "orange-line-bottom" id= "map-section" width="100%">
           <!-- Map partial -->
           <%= render 'map', event: event, index: index %>
 
