--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -30,13 +30,8 @@ $(document).ready(function() {
   });
 });
 
-var displayedEvent = document.getElementById('displayed-event');
-var mc = new Hammer(displayedEvent);
-mc.on("swipeleft", function() {
-  nextEvent();
-});
-mc.on("swiperight", function() {
-  prevEvent();
+var displayedEvent = $(".event-wrapper").each(function(i, item){
+  new Hammer(item).on("swipeleft", nextEvent).on("swiperight", previousEvent);
 });
 
 function nextEvent() {
@@ -71,9 +66,9 @@ function previousEvent() {
   var $previousEvent = $('.active-event').removeClass("active-event").addClass("non-active-event").prev()
   $previousEvent.removeClass("non-active-event").addClass("active-event");
 
-  var index = $nextEvent.data("index");
-  var lat = $nextEvent.data("lat");
-  var lng = $nextEvent.data("lng");
+  var index = $previousEvent.data("index");
+  var lat = $previousEvent.data("lat");
+  var lng = $previousEvent.data("lng");
   var handler = Gmaps.build('Google');
   var styles = [{"featureType":"all","elementType":"labels.text.fill","stylers":[{"color":"#ffffff"}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"color":"#000000"},{"lightness":13}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#144b53"},{"lightness":14},{"weight":1.4}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#08304b"}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#0c4152"},{"lightness":5}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#0b434f"},{"lightness":25}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"color":"#000000"}]},{"featureType":"road.arterial","elementType":"geometry.stroke","stylers":[{"color":"#0b3d51"},{"lightness":16}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"}]},{"featureType":"transit","elementType":"all","stylers":[{"color":"#146474"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#021019"}]}];
 
