search form for location added and functional

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,5 +11,9 @@
           <%= link_to t("HYPE ME!"), events_path, id: "hype-btn" %>
         </div>
       </div>
+      <div class="col-xs-12" style="margin-top: 150px; margin-bottom: 75px;">
+        <input type="text" name="loco" style="color: black;" placeholder="insert a location">
+        <button class="navbar-hype-item navbar-hype-button btn" style="border: 2px solid white;" id="locat-search-btn">search</button>
+      </div>
     </div>
   </div>
