--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,12 +3,13 @@
   color: #C6C5B9;
   font-size: 12px;
   font-weight: lighter;
+  height: 150px;
   width: 100%;
   padding: 30px 0 10px 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
-
+  flex-direction: row;
   // height: 150px;
 }
 .footer-wrapper {
@@ -46,8 +47,9 @@
 // mobile only
 @media (max-width: 480px) {
   .footer {
-    flex-direction: column-reverse;
+    flex-direction: row;
     justify-content: space-between;
+    padding: 30px;
   }
   .footer-icons li {
     padding: 10px 10px 0 10px;
