--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,11 +1,14 @@
 #hype-btn {
+  display: inline-block;
+  text-align: center;
+  line-height: 45px;
   color: white;
   background: #F89D33;
-  border-radius: 50px;
-  height: 100%;
-  width: 100%;
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
   border: 2px solid #F89D33;
-  padding: 30px 30px;
+  padding: 30px;
   transition: background 0.3s ease;
   letter-spacing: 3px;
   font-size: 18px;
@@ -16,7 +19,6 @@
   color: white;
   box-shadow: inset 0 0 10px #000000;
   font-size: 17px;
-  margin-top: 4px;
 }
 // border-radius: 20em;
 // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
