--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <%= link_to t("HYPE ME!"), events_path, id: "hype-btn" %>
+          <%= link_to "HYPE ME!", events_path, id: "hype-btn" %>
         </div>
       </div>
       <div class="col-xs-12" style="margin-top: 150px; margin-bottom: 75px;">
